# OpenEquivariance

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  benchmarking_requirements.txt  pyproject.toml  pytest.ini
.github/workflows/: docs.yaml  release.yaml  requirements_cuda_ci.txt  test-release.yaml  verify_extension_build.yml
benchmarking/benchmark_routines/: paper_benchmark_uvw.py
configurations/: uvw_examples.py  uvw_tests.py
docs/: api.rst  conf.py  index.rst  installation.rst  livebuild.sh  requirements.txt  supported_ops.rst  tests_and_benchmarks.rst
examples/: readme_tutorial.py
openequivariance/: CMakeLists.txt  MANIFEST.in  README.md  __init__.py  logging_utils.py  pyproject.toml
openequivariance/benchmark/: ConvBenchmarkSuite.py  TestBenchmarkSuite.py  benchmark_configs.py  benchmark_utils.py  correctness_utils.py  problems.py  random_buffer_utils.py  tpp_creation_utils.py
openequivariance/benchmark/benchmark_routines/: paper_benchmark_uvw.py
openequivariance/benchmark/plotting/: __init__.py  _init_.py  plot_convolution.py  plot_double_backward.py  plot_roofline.py  plot_uvu.py  plot_uvw.py  plotting_utils.py
openequivariance/core/: ComputationSchedule.py  ConvolutionBase.py  LoopUnrollConv.py  LoopUnrollTP.py  TensorProductBase.py  utils.py
openequivariance/extension/: CMakeLists.txt  convolution.hpp  generic_module.cpp  group_mm_cuda.hpp  group_mm_hip.hpp  kernel_wrapper.cpp  libjax_tp_jit.cpp  libtorch_tp_jit.cpp  tensorproducts.hpp  torch_tp_jit.cpp  torch_wrapper.cpp
openequivariance/extension/test/: CMakeLists.txt  load_jitscript.cpp
openequivariance/extension/util/: backend_cuda.hpp  backend_hip.hpp
openequivariance/extlib/: __init__.py
openequivariance/impl_torch/: CUEConv.py  TensorProduct.py
openequivariance/impl_torch/symmetric_contraction/: __init__.py
openequivariance/implementations/: CUETensorProduct.py  ComputationSchedule.py  E3NNTensorProduct.py  LoopUnrollTP.py  MultiplicityOuterProductTP.py  TensorProduct.py  TensorProductBase.py  __init__.py  cue_utils.py  dtype_enum.py  e3nn_lite.py  utils.py
openequivariance/implementations/convolution/: CUEConv.py  ConvolutionBase.py  E3NNConv.py  FlashTPConv.py  LoopUnrollConv.py  NumpyConv.py  TensorProductConv.py
openequivariance/implementations/symmetric_contraction/: STPOpt.py  __init__.py  symmetric_contraction.py
openequivariance/interface/: TensorProductProblem.py  e3nn_lite.py  wigner_3j.py
openequivariance/openequivariance/: __init__.py
openequivariance/openequivariance/_torch/: CUETensorProduct.py  E3NNConv.py  E3NNTensorProduct.py  NPDoubleBackwardMixin.py  TensorProduct.py  TensorProductConv.py  utils.py
openequivariance/openequivariance/_torch/extlib/: __init__.py
openequivariance/openequivariance/_torch/symmetric_contraction/: symmetric_contraction.py
openequivariance/openequivariance/benchmark/: ConvBenchmarkSuite.py  TestBenchmarkSuite.py  benchmark_utils.py  correctness.py  correctness_utils.py  metrics.py  perf_metrics_utils.py  problems.py  random_buffer_utils.py  test_buffers.py
openequivariance/openequivariance/benchmark/plotting/: __init__.py  plot_layout.py
openequivariance/openequivariance/core/: ComputationSchedule.py  ConvolutionBase.py  LoopUnrollConv.py  LoopUnrollTP.py  TensorProductBase.py  e3nn_lite.py  utils.py
openequivariance/openequivariance/extension/: convolution.hpp  generic_module.cpp  libtorch_tp_jit.cpp  libtorch_tp_jit_stable.cpp  tensorproducts.hpp  torch_core.hpp
openequivariance/openequivariance/extension/backend/: backend_cuda.hpp
openequivariance/openequivariance/extension/stubs/: libtorch_cuda.cpp  stream.cpp
openequivariance/openequivariance/extension/test/: CMakeLists.txt  load_aoti.cpp
openequivariance/openequivariance/extension/util/: backend_hip.hpp
openequivariance/openequivariance/impl_jax/: TensorProduct.py  TensorProductConv.py  __init__.py
openequivariance/openequivariance/impl_jax/extlib/: __init__.py
openequivariance/openequivariance/impl_torch/: CUEConv.py  E3NNConv.py  E3NNTensorProduct.py  NPDoubleBackwardMixin.py  TensorProduct.py  TensorProductConv.py  utils.py
openequivariance/openequivariance/impl_torch/extlib/: __init__.py
openequivariance/openequivariance/impl_torch/symmetric_contraction/: symmetric_contraction.py
openequivariance/openequivariance/jax/: TensorProduct.py  TensorProductConv.py  __init__.py  utils.py
openequivariance/openequivariance/jax/extlib/: __init__.py
openequivariance/openequivariance/jax/jvp/: conv_prim.py  tp_prim.py
openequivariance/openequivariance/jax/vjp/: conv_func.py
openequivariance/openequivariance/templates/: loop_unroll_tp.cuh  macros.jinja
openequivariance/templates/: loop_unroll_batch.cuh  loop_unroll_conv_atomic.cuh  loop_unroll_conv_det.cuh  loop_unroll_tp.cuh  macros.jinja
openequivariance/tests/: batch_test.py  benchmark.py  export_test.py
openequivariance/torch/: CUEConv.py  E3NNConv.py  TensorProduct.py  TensorProductConv.py
openequivariance/torch/extlib/: __init__.py
openequivariance/torch/symmetric_contraction/: __init__.py
openequivariance_extjax/: CMakeLists.txt  README.md  pyproject.toml
openequivariance_extjax/src/: extension  libjax_tp_jit.cpp
test/: benchmark.py  mace_driver.py  test_correctness.py
tests/: autocast_test.py  batch_test.py  benchmark.py  conftest.py  conv_test.py  correctness_test.py  double_backwards_driver.py  e3nn_equivalence_test.py  example_test.py  examples_test.py  executable_utils.py  export_test.py  fixture_test.py  import_test.py  input_validation_test.py  mace_driver.py  multidevice_stream_test.py  multidevice_test.py  size_errors_test.py  stream_test.py  symmetric_contraction_test.py  torch_cpp_checks_test.py  tp_debug.py  utils.py  vmap_test.py
tests/benchmarking/: benchmark.py
tests/benchmarks/: ConvBenchmarkSuite.py  TestBenchmarkSuite.py  benchmark_utils.py  conv_correctness_utils.py  correctness_utils.py  perf_metrics_utils.py  problems.py
tests/configs/: __init__.py  roofline_configs.py  uvu_examples.py  uvw_examples.py  uvw_tests.py
tests/debug/: tp_debug.py  (+1 more)
(+23 files in other folders)
