[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openequivariance"
version = "0.1.0"
authors = [
  { name="Austin Glover" },
  { name="Vivek Bharadwaj" },
  { name="Aydin Buluc" },
  { name="James Demmel" }
]
description = "A fast GPU JIT kernel generator for the Clebsch-Gordon Tensor Product"
requires-python = ">=3.11"

dependencies = [
  "ninja",
  "jinja2",
  "torch",
  "numpy",
]

[project.optional-dependencies]
bench = [
  "matplotlib",
  "e3nn",
  "e3nn_jax",
  "cuequivariance",
  "cuequivariance-torch",
  "cuequivariance-ops-torch-cu12",
]

test = [
  "pytest",
  "pytest-cov",
]

lint = [
  "ruff"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.packages.find]
include = ["openequivariance*"]

[tool.setuptools.package_data]
# Including shared objects and empty files under extlib
"openequivariance.extlib" = ["*.so", "*.empty"]

# Including CUDA header files and Jinja templates under templates
"openequivariance.templates" = ["*.cuh", "*.jinja"]

# Including all files in the extension subdirectories
"openequivariance.extension" = ["*"]
"openequivariance.extension.convolution" = ["*"]
"openequivariance.extension.tensorproducts" = ["*"]
"openequivariance.extension.util" = ["*"]