[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openequivariance"
version = "0.1.0"
authors = [
  { name="Austin Glover" },
  { name="Vivek Bharadwaj" },
  { name="Aydin Buluc" },
  { name="James Demmel" }
]
description = "A fast GPU JIT kernel generator for the Clebsch-Gordon Tensor Product"
requires-python = ">=3.10"
dependencies = [
  "ninja",
  "jinja2",
  "numpy",
  "torch",
]
readme = "README.md"

license = "BSD-3-Clause"
license-files = ["LICENSE"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://passionlab.github.io/OpenEquivariance/"
source = "https://github.com/PASSIONLab/OpenEquivariance"
issues = "https://github.com/PASSIONLab/OpenEquivariance/issues"


[project.optional-dependencies]
bench = [
  "matplotlib",
  "tqdm",
  "e3nn",
  "cuequivariance",
  "cuequivariance-torch",
  "cuequivariance-ops-torch-cu12",
]

dev = [
  "e3nn",
  "pre-commit",
  "ruff",
  "pytest",
  "pytest-check",
  "torch_geometric",
  "cmake",
  "furo",
  "sphinx",
  "sphinx-autobuild"
]

[tool.setuptools.packages.find]
include = ["openequivariance*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
lint.ignore = ["E741"]