[build-system]
requires = ["setuptools", "setuptools-scm", "scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "openequivariance"
dynamic = ["version"]
authors = [
  { name="Austin Glover" },
  { name="Vivek Bharadwaj" },
  { name="Aydin Buluc" },
  { name="James Demmel" }
]
description = "A fast GPU JIT kernel generator for the Clebsch-Gordon Tensor Product"
requires-python = ">=3.10"
dependencies = [
  "setuptools",
  "ninja",
  "jinja2",
  "numpy",
  "nanobind"
]
readme = "README.md"

license = "BSD-3-Clause"
license-files = ["LICENSE"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://passionlab.github.io/OpenEquivariance/"
source = "https://github.com/PASSIONLab/OpenEquivariance"
issues = "https://github.com/PASSIONLab/OpenEquivariance/issues"


[project.optional-dependencies]
bench = [
  "matplotlib",
  "tqdm",
  "e3nn",
  "cuequivariance",
  "cuequivariance-torch",
  "cuequivariance-ops-torch-cu12",
]

dev = [
  "e3nn",
  "pre-commit",
  "ruff",
  "pytest",
  "pytest-check",
  "pytest-subtests",
  "torch_geometric",
  "cmake"
]

jax = [
  "scikit-build-core",
  "setuptools-scm"
]

[tool.setuptools.packages.find]
include = ["openequivariance*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
lint.ignore = ["E741"]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["openequivariance/_version.py"]

[tool.setuptools_scm]
write_to = "openequivariance/_version.py"
root = ".."